# gestao-financeira

./: .env.example  .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/api/: deps.py  main.py
backend/app/api/routes/: despesas.py  ia.py  relatorios.py
backend/app/core/: config.py
backend/app/models/domain/: despesa.py
backend/app/services/: supabase_service.py
backend/app/services/ia/: base.py  clients.py  config.py  factory.py  manager.py  provider.py
backend/scripts/: dev.py  setup-supabase.sql
frontend/: api_client.py  main.py  pyproject.toml  streamlit_app.py
frontend/components/: ia_selector.py
tests/: conftest.py  test_ia_base.py  test_ia_config.py  test_ia_factory.py  test_ia_manager.py  test_supabase_service.py
tests/api/routes/: test_despesas_routes.py  test_ia_routes.py  test_relatorios_routes.py
tests/services/ia/: test_ia_base.py  test_ia_config.py  test_ia_factory.py  test_ia_manager.py  test_ias.py
tests/services/supabase/: test_supabase_service.py
