[project]
name = "gestao-financeira-backend"
version = "0.1.0"
description = "Backend para sistema de gestão financeira com múltiplas IAs"
readme = "README.md"
authors = [
  { name = "Rodrigo Santana", email = "rodrigogus94@gmail.com" },
  { name = "Rodrigo Santana", email = "rodrigoalisson33@gmail.com" },
]
requires-python = ">=3.13.5"

dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "supabase>=2.28.0",
    "supabase-pydantic>=0.26.10",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[project.urls]
Repository = "https://github.com/rodrigogus94/gestao-financeira"

[project.scripts]
dev = "scripts.dev:main"
test-ias = "scripts.test_ias:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
packages = ["app"]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
asyncio_mode = "auto"

