[project]
name = "gestao-financeira-backend"
version = "0.1.0"
description = "Backend para sistema de gestão financeira com múltiplas IAs"
readme = "README.md"
authors = [
  { name = "Rodrigo Santana", email = "rodrigogus94@gmail.com" },
  { name = "Rodrigo Santana", email = "rodrigoalisson33@gmail.com" },
]

requires-python = ">=3.13.5"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
]
